--- a/css/main.scss
+++ b/css/main.scss
@@ -1,20 +1,13 @@
 $tlo-kolor: hsla(0, 0%, 70%, 0.5);
-$naglowek-tekst: rgba(0, 0, 0, 0.45);
 $naglowek-cien: 2px 2px 1px rgba(0, 0, 0, 0.15);
 $naglowek-cien-odwrocony: -2px -2px 1px rgba(0, 0, 0, 0.15);
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  user-select: none;
-  -webkit-user-select: none;
-  -webkit-user-callout: none;
-  -webkit-touch-callout: none;
+html {
+  height: 100%;
 }
 
 body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: sans-serif;
   font-size: 14px;
   color: #333;
   background-color: $tlo-kolor;
@@ -24,10 +17,19 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
 }
 
-html {
-  height: 100%;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  user-select: none;
+  outline: 0;
+  -webkit-user-select: none;
+  -webkit-user-callout: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 #content {
@@ -36,83 +38,68 @@ html {
   min-height: 370px;
   max-width: 800px;
   margin: auto;
-  opacity: 0;
-  transition: opacity 1s;
 }
 
 .naglowek {
   display: flex;
-  color: $naglowek-tekst;
+  color: rgba(0, 0, 0, 0.45);
   font-weight: bold;
   list-style: none;
   padding: 0;
   margin: 0;
   position: relative;
 
-  .item {
-    font-size: 2.5em;
-    float: left;
-    margin: 10px 0;
+  > div {
+    flex: 1;
+    font-size: 5vw;
+    padding: 10px 0;
     cursor: default;
-    transition: all 0.3s;
-    width: 25%;
     text-align: center;
+    white-space: nowrap;
 
-    span {
-      text-shadow: $naglowek-cien;
-    }
-  }
-}
+    .reset {
+      cursor: pointer;
+      background: none;
+      border: none;
+      padding: 0;
 
-.pomoc {
-  cursor: pointer;
+      &.disabled {
+        opacity: 0.25;
+        pointer-events: none;
 
-  .fa {
-    text-shadow: none !important;
-    transition: transform 0.3s;
-    position: relative;
-
-    &.obrot {
-      transform: rotate(180deg);
-
-      &:after {
-        transform: rotate(-180deg);
+        span {
+          transition: transform 0.3s;
+          transform: rotate(180deg);
+        }
       }
     }
 
-    &:after {
-      content: '';
-      position: absolute;
-      left: 0;
-      top: 2px;
-      right: 0;
-      bottom: 2px;
-      border-radius: 50%;
-      box-shadow: $naglowek-cien;
-      transition: all 0.3s;
-    }
-  }
-}
+    .pomoc {
+      cursor: pointer;
 
-.reset {
-  transition: opacity 0.2s;
-  cursor: pointer;
-  background: none;
-  border: none;
-  padding: 0;
+      .fa {
+        transition: transform 0.3s;
+        position: relative;
 
-  span {
-    text-shadow: $naglowek-cien;
-  }
+        &.obrot {
+          transform: rotate(180deg);
 
-  &.disabled {
-    opacity: 0.25;
-    pointer-events: none;
+          &:after {
+            transform: rotate(-180deg);
+          }
+        }
 
-    span {
-      transition: transform 0.3s;
-      transform: rotate(180deg);
-      text-shadow: none;
+        &:after {
+          content: '';
+          position: absolute;
+          left: 0;
+          top: 2px;
+          right: 0;
+          bottom: 2px;
+          border-radius: 50%;
+          transition: all 0.3s;
+        }
+      }
     }
   }
 }
@@ -128,13 +115,11 @@ html {
   border-radius: 3px;
   background: hsla(0, 0, 70, 1) url(../img/noise.png);
   transform: translate3d(0, 10px, 0) rotate3d(1, 1, 0, 25deg);
-  transition: opacity 0.2s, transform 0.2s, box-shadow 0.5s, height 0.2s;
-  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
+  transition: opacity 0.2s, transform 0.2s, height 0.2s;
   opacity: 0;
 
   &.active {
     opacity: 1;
-    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.35);
     transform: translate3d(0, 0, 0) rotate3d(0, 0, 0, 0);
   }
 
@@ -148,7 +133,6 @@ html {
     color: #fff;
     background-color: #333;
     border-radius: 3px;
-    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.25);
     margin-bottom: 3px;
     display: inline-block;
     padding: 2px 4px;
@@ -161,15 +145,6 @@ html {
   }
 }
 
-.reset,
-table,
-.pomoc {
-  outline: 0;
-  user-select: none;
-  -webkit-touch-callout: none;
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-}
-
 table {
   border-collapse: initial;
   border-spacing: 7px;
@@ -177,6 +152,8 @@ table {
   width: 100%;
   height: 100%;
   margin: -7px auto 0;
+
+  border: 5px solid red;
 
   td {
     color: rgba(white, 0);
@@ -186,37 +163,29 @@ table {
     height: 10%;
     background: rgba(0, 0, 0, 0.3);
     text-align: center;
-    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0);
     font-weight: bold;
     border-radius: 3px;
-    box-shadow: 2px 2px 5px -1px rgba(0, 0, 0, 0.2);
     cursor: pointer;
-    transition: all 0.2s;
     outline: 0;
 
     &.odkryte {
       color: rgba(0, 0, 0, 0.5);
       background: rgba(0, 0, 0, 0);
-      text-shadow: $naglowek-cien;
-      box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
       cursor: default;
     }
 
     &.zaznaczone {
       color: rgba(white, 1);
-      text-shadow: $naglowek-cien;
       background: #f0ad4e;
     }
 
     &.dobrze {
       color: rgba(white, 1);
-      text-shadow: $naglowek-cien;
       background: #5cb85c;
     }
 
     &.bomba {
       color: rgba(white, 1);
-      text-shadow: $naglowek-cien;
       background: #d9534f;
     }
   }
@@ -229,10 +198,6 @@ table {
 
 @media screen and (min-width: 800px) {
   table {
-    font-size: 2em;
-    margin-top: -6px;
-    border-spacing: 6px;
-
     td.zakryte:not(.zaznaczone) {
       &:hover,
       &.hover {
@@ -243,31 +208,16 @@ table {
 }
 
 @media screen and (max-width: 799px), (max-height: 799px) {
-  table {
-    font-size: 1.5em;
-    margin-top: -5px;
-    border-spacing: 5px;
+  .mobile {
+    display: block;
   }
 
-  .sterowanie {
-    .mobile {
-      display: block;
-    }
-
-    .desktop {
-      display: none;
-    }
+  .desktop {
+    display: none;
   }
 }
 
 @media screen and (max-width: 500px), (max-height: 500px) {
-  .naglowek {
-    .item {
-      font-size: 1.5em;
-      margin: 5px;
-    }
-  }
-
   .sterowanie {
     width: auto;
     margin: 0;
@@ -284,11 +234,5 @@ table {
     p {
       margin: 0.5em 0;
     }
-  }
-
-  table {
-    border-spacing: 3px;
-    font-size: 1em;
-    margin-top: -3px;
   }
 }
