--- a/css/main.css
+++ b/css/main.css
@@ -1,60 +1,57 @@
 html { height: 100%; }
 
-body { font-family: sans-serif; font-size: 14px; color: #333; background-color: rgba(179, 179, 179, 0.5); background-image: url(../img/noise.png); transition: background-color 1s; overflow: hidden; height: 100%; display: flex; flex-direction: column; box-sizing: border-box; }
+body { font-family: sans-serif; font-size: 14px; color: #333; background-color: rgba(179, 179, 179, 0.5); background-image: url(../img/noise.png); background-position: center; transition: background-color 0.2s; overflow: hidden; height: 100%; display: flex; flex-direction: column; box-sizing: border-box; }
 
 *, *::before, *::after { box-sizing: inherit; user-select: none; outline: 0; -webkit-user-select: none; -webkit-user-callout: none; -webkit-touch-callout: none; -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
 
-#content { width: 100%; min-width: 330px; min-height: 370px; max-width: 800px; margin: auto; }
+main { width: 100%; max-width: 640px; margin: auto; padding: 0 8px 8px; }
 
-.naglowek { display: flex; color: rgba(0, 0, 0, 0.45); font-weight: bold; list-style: none; padding: 0; margin: 0; position: relative; }
+main.hidden { visibility: hidden; }
 
-.naglowek > div { flex: 1; font-size: 5vw; padding: 10px 0; cursor: default; text-align: center; white-space: nowrap; }
+nav { display: flex; color: rgba(0, 0, 0, 0.45); font-size: clamp(24px, 5vw, 32px); font-weight: bold; position: relative; }
 
-.naglowek > div .reset { cursor: pointer; background: none; border: none; padding: 0; }
+nav > div { flex: 1; padding: 10px 0; cursor: default; text-align: center; white-space: nowrap; }
 
-.naglowek > div .reset.disabled { opacity: 0.25; pointer-events: none; }
+nav > div .reset { cursor: pointer; background: none; border: none; padding: 0; }
 
-.naglowek > div .reset.disabled span { transition: transform 0.3s; transform: rotate(180deg); }
+nav > div .reset.disabled { opacity: 0.25; pointer-events: none; }
 
-.naglowek > div .pomoc { cursor: pointer; }
+nav > div .reset.disabled span { transition: transform 0.3s; transform: rotate(180deg); }
 
-.naglowek > div .pomoc .fa { transition: transform 0.3s; position: relative; }
+nav > div .pomoc { cursor: pointer; }
 
-.naglowek > div .pomoc .fa.obrot { transform: rotate(180deg); }
+aside { display: none; position: absolute; top: 100px; left: 50%; width: 490px; padding: 10px; margin-left: -245px; border-radius: 3px; background: #b3b3b3 url(../img/noise.png); transform: translate3d(0, 10px, 0) rotate3d(1, 1, 0, 25deg); transition: opacity 0.2s, transform 0.2s, height 0.2s; opacity: 0; }
 
-.naglowek > div .pomoc .fa.obrot:after { transform: rotate(-180deg); }
+aside.active { opacity: 1; transform: translate3d(0, 0, 0) rotate3d(0, 0, 0, 0); }
 
-.naglowek > div .pomoc .fa:after { content: ''; position: absolute; left: 0; top: 2px; right: 0; bottom: 2px; border-radius: 50%; transition: all 0.3s; }
+aside h1 { margin: 10px 0; text-align: center; font-size: 6em; }
 
-.sterowanie { display: none; position: absolute; top: 100px; left: 50%; width: 490px; padding: 10px; margin-left: -245px; border-radius: 3px; background: #b3b3b3 url(../img/noise.png); transform: translate3d(0, 10px, 0) rotate3d(1, 1, 0, 25deg); transition: opacity 0.2s, transform 0.2s, height 0.2s; opacity: 0; }
+aside kbd { color: #fff; background-color: #333; border-radius: 3px; margin-bottom: 3px; display: inline-block; padding: 2px 4px; font-size: 0.9em; font-family: Menlo, Monaco, Consolas, 'Courier New', monospace; }
 
-.sterowanie.active { opacity: 1; transform: translate3d(0, 0, 0) rotate3d(0, 0, 0, 0); }
+aside .mobile { display: none; }
 
-.sterowanie h1 { margin: 10px 0; text-align: center; font-size: 6em; }
+#grid { display: grid; gap: 4px; width: 100%; margin: auto 0; transition: gap 0.2s; }
 
-.sterowanie kbd { color: #fff; background-color: #333; border-radius: 3px; margin-bottom: 3px; display: inline-block; padding: 2px 4px; font-size: 0.9em; font-family: Menlo, Monaco, Consolas, 'Courier New', monospace; }
+#grid > div { display: flex; justify-content: center; align-items: center; border-radius: 3px; text-align: center; font-size: clamp(16px, 5vw, 24px); font-weight: bold; cursor: pointer; }
 
-.sterowanie .mobile { display: none; }
+#grid > div.zakryte { background: rgba(0, 0, 0, 0.3); }
 
-table { border-collapse: initial; border-spacing: 7px; user-select: none; width: 100%; height: 100%; margin: -7px auto 0; border: 5px solid red; }
+#grid > div.zakryte.has-bomb { border: 10px solid #d9534f; }
 
-table td { color: rgba(255, 255, 255, 0); min-height: 15px; min-width: 15px; width: 10%; height: 10%; background: rgba(0, 0, 0, 0.3); text-align: center; font-weight: bold; border-radius: 3px; cursor: pointer; outline: 0; }
+#grid > div.odkryte { color: rgba(0, 0, 0, 0.5); background: rgba(0, 0, 0, 0); cursor: default; }
 
-table td.odkryte { color: rgba(0, 0, 0, 0.5); background: rgba(0, 0, 0, 0); cursor: default; }
+#grid > div.zaznaczone { color: white; background: #f0ad4e; }
 
-table td.zaznaczone { color: white; background: #f0ad4e; }
+#grid > div.dobrze { color: white; background: #5cb85c; }
 
-table td.dobrze { color: white; background: #5cb85c; }
+#grid > div.bomba { color: white; background: #d9534f; }
 
-table td.bomba { color: white; background: #d9534f; }
+@media screen and (max-width: 500px) { aside { width: auto; margin: 0; top: 50px; left: 10px; right: 10px; pointer-events: auto; }
+  aside h1 { margin: 2px 0; font-size: 4em; }
+  aside p { margin: 0.5em 0; } }
 
-table .fa-flag { opacity: 0; transition: opacity 0.3s; }
-
-@media screen and (min-width: 800px) { table td.zakryte:not(.zaznaczone):hover, table td.zakryte:not(.zaznaczone).hover { background: rgba(0, 0, 0, 0.5); } }
-
-@media screen and (max-width: 799px), (max-height: 799px) { .mobile { display: block; }
+@media screen and (max-width: 799px) { .mobile { display: block; }
   .desktop { display: none; } }
 
-@media screen and (max-width: 500px), (max-height: 500px) { .sterowanie { width: auto; margin: 0; top: 50px; left: 10px; right: 10px; pointer-events: auto; }
-  .sterowanie h1 { margin: 2px 0; font-size: 4em; }
-  .sterowanie p { margin: 0.5em 0; } }
+@media screen and (min-width: 800px) { #grid { gap: 8px; }
+  #grid > div.zakryte:not(.zaznaczone):hover, #grid > div.zakryte:not(.zaznaczone).hover { background: rgba(0, 0, 0, 0.5); } }
