--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body { font-family: sans-serif; font-size: 14px; color: #333; background-color: 
 
 *, *::before, *::after { box-sizing: inherit; user-select: none; outline: 0; -webkit-user-select: none; -webkit-user-callout: none; -webkit-touch-callout: none; -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
 
-main { width: 100%; max-width: 640px; margin: auto; padding: 0 8px 8px; }
+main { width: 100%; max-width: 640px; margin: auto; padding: 0 8px 8px; position: relative; }
 
 main.hidden { visibility: hidden; }
 
@@ -20,13 +20,15 @@ nav > div .reset.disabled span { transition: transform 0.3s; transform: rotate(1
 
 nav > div .pomoc { cursor: pointer; }
 
-aside { display: none; position: absolute; top: 100px; left: 50%; width: 490px; padding: 10px; margin-left: -245px; border-radius: 3px; background: #b3b3b3 url(../img/noise.png); transform: translate3d(0, 10px, 0) rotate3d(1, 1, 0, 25deg); transition: opacity 0.2s, transform 0.2s, height 0.2s; opacity: 0; }
+aside { background: rgba(0, 0, 0, 0.5); position: fixed; top: 0; right: 0; bottom: 0; left: 0; z-index: 5; justify-content: center; align-items: center; display: none; }
 
-aside.active { opacity: 1; transform: translate3d(0, 0, 0) rotate3d(0, 0, 0, 0); }
+aside.active { display: flex; }
 
-aside h1 { margin: 10px 0; text-align: center; font-size: 6em; }
+aside > div { width: 100%; max-width: 490px; margin: 8px; padding: 10px; border-radius: 3px; background: #b3b3b3 url(../img/noise.png); }
 
-aside kbd { color: #fff; background-color: #333; border-radius: 3px; margin-bottom: 3px; display: inline-block; padding: 2px 4px; font-size: 0.9em; font-family: Menlo, Monaco, Consolas, 'Courier New', monospace; }
+aside h1 { margin: 10px 0; text-align: center; font-size: 5em; }
+
+aside kbd { color: white; background-color: #333; border-radius: 3px; margin-bottom: 3px; display: inline-block; padding: 2px 4px; font-size: 0.8em; font-family: Menlo, Monaco, Consolas, 'Courier New', monospace; }
 
 #grid { display: grid; gap: 4px; width: 100%; margin: auto 0; transition: gap 0.2s; }
 
@@ -44,10 +46,7 @@ aside kbd { color: #fff; background-color: #333; border-radius: 3px; margin-bott
 
 #grid > div.bomba { color: white; background: #d9534f; }
 
-@media screen and (max-width: 639px) { aside { width: auto; margin: 0; top: 50px; left: 10px; right: 10px; pointer-events: auto; }
-  aside h1 { margin: 2px 0; font-size: 4em; }
-  aside p { margin: 0.5em 0; }
-  .desktop { display: none; } }
+@media screen and (max-width: 639px) { .desktop { display: none; } }
 
 @media screen and (min-width: 640px) { #grid { gap: 8px; }
   #grid > div.zakryte:not(.zaznaczone):hover, #grid > div.zakryte:not(.zaznaczone).hover { background: rgba(0, 0, 0, 0.5); }
