--- a/css/main.scss
+++ b/css/main.scss
@@ -34,7 +34,8 @@ main {
   max-width: 640px;
   margin: auto;
   padding: 0 8px 8px;
-  
+  position: relative;
+
   &.hidden {
     visibility: hidden;
   }
@@ -78,38 +79,45 @@ nav {
 }
 
 aside {
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 5;
+  justify-content: center;
+  align-items: center;
+  
   display: none;
-  position: absolute;
-  top: 100px;
-  left: 50%;
-  width: 490px;
-  padding: 10px;
-  margin-left: -245px;
-  border-radius: 3px;
-  background: hsla(0, 0, 70, 1) url(../img/noise.png);
-  transform: translate3d(0, 10px, 0) rotate3d(1, 1, 0, 25deg);
-  transition: opacity 0.2s, transform 0.2s, height 0.2s;
-  opacity: 0;
-
+  
   &.active {
-    opacity: 1;
-    transform: translate3d(0, 0, 0) rotate3d(0, 0, 0, 0);
+    display: flex;
+  }
+
+  > div {
+    width: 100%;
+    max-width: 490px;
+    margin: 8px;
+    padding: 10px;
+    border-radius: 3px;
+    background: hsla(0, 0, 70, 1) url(../img/noise.png);
   }
 
   h1 {
     margin: 10px 0;
     text-align: center;
-    font-size: 6em;
+    font-size: 5em;
   }
 
   kbd {
-    color: #fff;
+    color:white;
     background-color: #333;
     border-radius: 3px;
     margin-bottom: 3px;
     display: inline-block;
     padding: 2px 4px;
-    font-size: 0.9em;
+    font-size: 0.8em;
     font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
   }
 }
@@ -163,24 +171,6 @@ aside {
 }
 
 @media screen and (max-width: 639px) {
-  aside {
-    width: auto;
-    margin: 0;
-    top: 50px;
-    left: 10px;
-    right: 10px;
-    pointer-events: auto;
-
-    h1 {
-      margin: 2px 0;
-      font-size: 4em;
-    }
-
-    p {
-      margin: 0.5em 0;
-    }
-  }
-
   .desktop {
     display: none;
   }
@@ -191,11 +181,11 @@ aside {
     gap: 8px;
 
     > div.zakryte:not(.zaznaczone) {
-        &:hover,
-        &.hover {
-          background: rgba(0, 0, 0, 0.5);
-        }
+      &:hover,
+      &.hover {
+        background: rgba(0, 0, 0, 0.5);
       }
+    }
   }
 
   .mobile {
