--- a/css/main.css
+++ b/css/main.css
@@ -30,13 +30,13 @@ aside h1 { margin: 10px 0; text-align: center; font-size: 5em; }
 
 aside kbd { color: white; background-color: #333; border-radius: 3px; margin-bottom: 3px; display: inline-block; padding: 2px 4px; font-size: 0.8em; font-family: Menlo, Monaco, Consolas, 'Courier New', monospace; }
 
-#grid { display: grid; gap: 4px; width: 100%; margin: auto 0; transition: gap 0.2s; }
+#grid { display: grid; gap: 4px; width: 100%; margin: auto 0; }
 
 #grid > div { display: flex; justify-content: center; align-items: center; border-radius: 3px; text-align: center; font-size: clamp(14px, 4vw, 24px); font-weight: bold; cursor: pointer; }
 
 #grid > div.zakryte { background: rgba(0, 0, 0, 0.3); }
 
-#grid > div.zakryte.has-bomb { border: 10px solid #d9534f; }
+#grid > div.zakryte.has-bomb { border: 0.3em solid #d9534f; }
 
 #grid > div.odkryte { color: rgba(0, 0, 0, 0.5); background: rgba(0, 0, 0, 0); cursor: default; }
 
