--- a/css/main.scss
+++ b/css/main.scss
@@ -1,294 +1,193 @@
-$tlo-kolor: hsla(0, 0%, 70%, 0.5);
-$naglowek-tekst: rgba(0, 0, 0, 0.45);
-$naglowek-cien: 2px 2px 1px rgba(0, 0, 0, 0.15);
-$naglowek-cien-odwrocony: -2px -2px 1px rgba(0, 0, 0, 0.15);
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  user-select: none;
-  -webkit-user-select: none;
-  -webkit-user-callout: none;
-  -webkit-touch-callout: none;
-}
-
-body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #333;
-  background-color: $tlo-kolor;
-  background-image: url(../img/noise.png);
-  transition: background-color 1s;
-  overflow: hidden;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
 html {
   height: 100%;
 }
 
-#content {
-  width: 100%;
-  min-width: 330px;
-  min-height: 370px;
-  max-width: 800px;
-  margin: auto;
-  opacity: 0;
-  transition: opacity 1s;
+body {
+  font-family: sans-serif;
+  font-size: 14px;
+  color: #333;
+  background-color: hsla(0, 0%, 70%, 0.5);
+  background-image: url(../img/noise.png);
+  background-position: center;
+  transition: background-color 0.2s;
+  overflow: hidden;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
 }
 
-.naglowek {
-  display: flex;
-  color: $naglowek-tekst;
-  font-weight: bold;
-  list-style: none;
-  padding: 0;
-  margin: 0;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  user-select: none;
+  outline: 0;
+  -webkit-user-select: none;
+  -webkit-user-callout: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+}
+
+main {
+  width: 100%;
+  max-width: 640px;
+  margin: auto;
+  padding: 0 8px 8px;
   position: relative;
 
-  .item {
-    font-size: 2.5em;
-    float: left;
-    margin: 10px 0;
-    cursor: default;
-    transition: all 0.3s;
-    width: 25%;
-    text-align: center;
-
-    span {
-      text-shadow: $naglowek-cien;
-    }
+  &.hidden {
+    visibility: hidden;
   }
 }
 
-.pomoc {
-  cursor: pointer;
+nav {
+  display: flex;
+  color: rgba(0, 0, 0, 0.45);
+  font-size: clamp(22px, 5vw, 32px);
+  font-weight: bold;
+  position: relative;
 
-  .fa {
-    text-shadow: none !important;
-    transition: transform 0.3s;
-    position: relative;
+  > div {
+    flex: 1;
+    padding: 10px 0;
+    cursor: default;
+    text-align: center;
+    white-space: nowrap;
 
-    &.obrot {
-      transform: rotate(180deg);
+    .reset {
+      cursor: pointer;
+      background: none;
+      border: none;
+      padding: 0;
 
-      &:after {
-        transform: rotate(-180deg);
+      &.disabled {
+        opacity: 0.25;
+        pointer-events: none;
+
+        span {
+          transition: transform 0.3s;
+          transform: rotate(180deg);
+        }
       }
     }
 
-    &:after {
-      content: '';
-      position: absolute;
-      left: 0;
-      top: 2px;
-      right: 0;
-      bottom: 2px;
-      border-radius: 50%;
-      box-shadow: $naglowek-cien;
-      transition: all 0.3s;
+    .pomoc {
+      cursor: pointer;
     }
   }
 }
 
-.reset {
-  transition: opacity 0.2s;
-  cursor: pointer;
-  background: none;
-  border: none;
-  padding: 0;
-
-  span {
-    text-shadow: $naglowek-cien;
-  }
-
-  &.disabled {
-    opacity: 0.25;
-    pointer-events: none;
-
-    span {
-      transition: transform 0.3s;
-      transform: rotate(180deg);
-      text-shadow: none;
-    }
-  }
-}
-
-.sterowanie {
+aside {
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 5;
+  justify-content: center;
+  align-items: center;
+  
   display: none;
-  position: absolute;
-  top: 100px;
-  left: 50%;
-  width: 490px;
-  padding: 10px;
-  margin-left: -245px;
-  border-radius: 3px;
-  background: hsla(0, 0, 70, 1) url(../img/noise.png);
-  transform: translate3d(0, 10px, 0) rotate3d(1, 1, 0, 25deg);
-  transition: opacity 0.2s, transform 0.2s, box-shadow 0.5s, height 0.2s;
-  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
-  opacity: 0;
-
+  
   &.active {
-    opacity: 1;
-    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.35);
-    transform: translate3d(0, 0, 0) rotate3d(0, 0, 0, 0);
+    display: flex;
+  }
+
+  > div {
+    width: 100%;
+    max-width: 490px;
+    margin: 8px;
+    padding: 10px;
+    border-radius: 3px;
+    background: hsla(0, 0, 70, 1) url(../img/noise.png);
   }
 
   h1 {
     margin: 10px 0;
     text-align: center;
-    font-size: 6em;
+    font-size: 5em;
   }
 
   kbd {
-    color: #fff;
+    color:white;
     background-color: #333;
     border-radius: 3px;
-    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.25);
     margin-bottom: 3px;
     display: inline-block;
     padding: 2px 4px;
-    font-size: 0.9em;
+    font-size: 0.8em;
     font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
   }
-
-  .mobile {
-    display: none;
-  }
 }
 
-.reset,
-table,
-.pomoc {
-  outline: 0;
-  user-select: none;
-  -webkit-touch-callout: none;
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-}
-
-table {
-  border-collapse: initial;
-  border-spacing: 7px;
-  user-select: none;
+#grid {
+  display: grid;
+  gap: 4px;
   width: 100%;
-  height: 100%;
-  margin: -7px auto 0;
+  margin: auto 0;
 
-  td {
-    color: rgba(white, 0);
-    min-height: 15px;
-    min-width: 15px;
-    width: 10%;
-    height: 10%;
-    background: rgba(0, 0, 0, 0.3);
-    text-align: center;
-    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0);
-    font-weight: bold;
+  > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 3px;
-    box-shadow: 2px 2px 5px -1px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    font-size: clamp(14px, 4vw, 24px);
+    font-weight: bold;
     cursor: pointer;
-    transition: all 0.2s;
-    outline: 0;
+
+    &.zakryte {
+      background: rgba(0, 0, 0, 0.3);
+
+      &.has-bomb {
+        border: 0.3em solid #d9534f;
+      }
+    }
 
     &.odkryte {
       color: rgba(0, 0, 0, 0.5);
       background: rgba(0, 0, 0, 0);
-      text-shadow: $naglowek-cien;
-      box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
       cursor: default;
     }
 
     &.zaznaczone {
       color: rgba(white, 1);
-      text-shadow: $naglowek-cien;
       background: #f0ad4e;
     }
 
     &.dobrze {
       color: rgba(white, 1);
-      text-shadow: $naglowek-cien;
       background: #5cb85c;
     }
 
     &.bomba {
       color: rgba(white, 1);
-      text-shadow: $naglowek-cien;
       background: #d9534f;
     }
   }
+}
 
-  .fa-flag {
-    opacity: 0;
-    transition: opacity 0.3s;
+@media screen and (max-width: 639px) {
+  .desktop {
+    display: none;
   }
 }
 
-@media screen and (min-width: 800px) {
-  table {
-    font-size: 2em;
-    margin-top: -6px;
-    border-spacing: 6px;
+@media screen and (min-width: 640px) {
+  #grid {
+    gap: 8px;
 
-    td.zakryte:not(.zaznaczone) {
+    > div.zakryte:not(.zaznaczone) {
       &:hover,
       &.hover {
         background: rgba(0, 0, 0, 0.5);
       }
     }
   }
-}
 
-@media screen and (max-width: 799px), (max-height: 799px) {
-  table {
-    font-size: 1.5em;
-    margin-top: -5px;
-    border-spacing: 5px;
-  }
-
-  .sterowanie {
-    .mobile {
-      display: block;
-    }
-
-    .desktop {
-      display: none;
-    }
-  }
-}
-
-@media screen and (max-width: 500px), (max-height: 500px) {
-  .naglowek {
-    .item {
-      font-size: 1.5em;
-      margin: 5px;
-    }
-  }
-
-  .sterowanie {
-    width: auto;
-    margin: 0;
-    top: 50px;
-    left: 10px;
-    right: 10px;
-    pointer-events: auto;
-
-    h1 {
-      margin: 2px 0;
-      font-size: 4em;
-    }
-
-    p {
-      margin: 0.5em 0;
-    }
-  }
-
-  table {
-    border-spacing: 3px;
-    font-size: 1em;
-    margin-top: -3px;
+  .mobile {
+    display: none;
   }
 }
