--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ main.hidden { visibility: hidden; }
 
 nav { display: flex; color: rgba(0, 0, 0, 0.45); font-size: clamp(22px, 5vw, 32px); font-weight: bold; position: relative; }
 
-nav > div { flex: 1; padding: 10px 0; cursor: default; text-align: center; white-space: nowrap; }
+nav > div { flex: 1; padding: 10px 0; text-align: center; white-space: nowrap; }
 
 nav > div .reset { cursor: pointer; background: none; border: none; padding: 0; }
 
@@ -18,17 +18,21 @@ nav > div .reset.disabled { opacity: 0.25; pointer-events: none; }
 
 nav > div .reset.disabled span { transition: transform 0.3s; transform: rotate(180deg); }
 
-nav > div .pomoc { cursor: pointer; }
+nav > div.pomoc { cursor: pointer; }
 
 aside { background: rgba(0, 0, 0, 0.5); position: fixed; top: 0; right: 0; bottom: 0; left: 0; z-index: 5; justify-content: center; align-items: center; display: none; }
 
 aside.active { display: flex; }
 
-aside > div { width: 100%; max-width: 490px; margin: 8px; padding: 10px; border-radius: 3px; background: #b3b3b3 url(../img/noise.png); }
+aside > div { display: flex; flex-direction: column; width: 100%; max-width: 420px; margin: 16px; padding: 16px; border-radius: 3px; background: #b3b3b3 url(../img/noise.png); position: relative; }
 
-aside h1 { margin: 10px 0; text-align: center; font-size: 5em; }
+aside h1 { align-self: center; margin: 0 0 16px; font-size: 5em; }
+
+aside p { margin: 0 0 16px; }
 
 aside kbd { color: white; background-color: #333; border-radius: 3px; margin-bottom: 3px; display: inline-block; padding: 2px 4px; font-size: 0.8em; font-family: Menlo, Monaco, Consolas, 'Courier New', monospace; }
+
+aside .fa-times-circle { align-self: flex-end; font-size: 2em; cursor: pointer; position: absolute; }
 
 #grid { display: grid; gap: 4px; width: 100%; margin: auto 0; }
 
