--- a/css/main.css
+++ b/css/main.css
@@ -4,21 +4,17 @@ body { font-family: sans-serif; font-size: 14px; color: #333; background-color: 
 
 *, *::before, *::after { box-sizing: inherit; user-select: none; outline: 0; -webkit-user-select: none; -webkit-user-callout: none; -webkit-touch-callout: none; -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
 
+.clickable:not(.disabled) { cursor: pointer; }
+
 main { width: 100%; max-width: 640px; margin: auto; padding: 0 8px 8px; position: relative; }
 
 main.hidden { visibility: hidden; }
 
 nav { display: flex; color: rgba(0, 0, 0, 0.45); font-size: clamp(22px, 5vw, 32px); font-weight: bold; position: relative; }
 
-nav > div { flex: 1; padding: 10px 0; text-align: center; white-space: nowrap; }
+nav > div { display: flex; justify-content: center; flex: 1; padding: 10px 0; white-space: nowrap; text-align: center; }
 
-nav > div .reset { cursor: pointer; background: none; border: none; padding: 0; }
-
-nav > div .reset.disabled { opacity: 0.25; pointer-events: none; }
-
-nav > div .reset.disabled span { transition: transform 0.3s; transform: rotate(180deg); }
-
-nav > div.pomoc { cursor: pointer; }
+nav .reset.disabled { opacity: 0.25; pointer-events: none; }
 
 aside { background: rgba(0, 0, 0, 0.5); position: fixed; top: 0; right: 0; bottom: 0; left: 0; z-index: 5; justify-content: center; align-items: center; display: none; }
 
