--- a/css/main.scss
+++ b/css/main.scss
@@ -52,7 +52,7 @@ nav {
   font-weight: bold;
   position: relative;
 
-  > div {
+  > * {
     display: flex;
     justify-content: center;
     flex: 1;
