--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ main.hidden { visibility: hidden; }
 
 nav { display: flex; color: rgba(0, 0, 0, 0.45); font-size: clamp(22px, 5vw, 32px); font-weight: bold; position: relative; }
 
-nav > div { display: flex; justify-content: center; flex: 1; padding: 10px 0; white-space: nowrap; text-align: center; }
+nav > * { display: flex; justify-content: center; flex: 1; padding: 10px 0; white-space: nowrap; text-align: center; }
 
 nav .reset.disabled { opacity: 0.25; pointer-events: none; }
 
